# Volleybot

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: relevant_urls.txt  vball_kb.pickle
data/clean/: volleyball-13.txt  volleyball-14.txt  volleyball-15.txt  volleyball-17.txt  volleyball-18.txt  volleyball-19.txt  volleyball-2.txt  volleyball-20.txt  volleyball-22.txt  volleyball-23.txt  volleyball-24.txt  volleyball-29.txt  volleyball-33.txt  volleyball-9.txt
data/scraped/: volleyball-10.txt  volleyball-11.txt  volleyball-12.txt  volleyball-13.txt  volleyball-14.txt  volleyball-15.txt  volleyball-16.txt  volleyball-17.txt  volleyball-18.txt  volleyball-19.txt  volleyball-2.txt  volleyball-20.txt  volleyball-21.txt  volleyball-22.txt  volleyball-23.txt  volleyball-24.txt  volleyball-26.txt  volleyball-27.txt  volleyball-28.txt  volleyball-29.txt  volleyball-3.txt  volleyball-30.txt  volleyball-32.txt  volleyball-33.txt  volleyball-34.txt  volleyball-36.txt  volleyball-37.txt  volleyball-39.txt  volleyball-5.txt  volleyball-6.txt  volleyball-7.txt  volleyball-8.txt  volleyball-9.txt
src/: volleybot.ipynb  web_crawler.py
