
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "spenpal", email = "spenpal2000@gmail.com"},
]
dependencies = [
    "beautifulsoup4>=4.12.2",
    "nltk>=3.8.1",
    "requests>=2.30.0",
    "spacy>=3.5.3",
    "vaderSentiment>=3.3.2",
    "ipykernel>=6.23.1",
    "scikit-learn>=1.2.2",
]
requires-python = ">=3.8"
license = {text = "MIT"}
